# meal-prep

./: .gitignore  Additions.md  README.md  TODO.md  add_meal_to_diary.py  check_data_files.py  check_recipe_definitions.py  ci-check.sh  config.py  config.yaml  dev-requirements.txt  history.pkl  ingredients.json  mail.py  make_shopping_list.py  meal.py  meals.json  print_ingredients.py  pyproject.toml  recommend.py  recommend_meals.py  remove_dates_from_diary.py  requirements.txt  rules.py  rules_factory.py  sort_data_files.py  test.py  test_meal_diary.py  todo.md  update_history.py  utils.py  write_meals.py
applications/: add_meal_to_diary.py  remove_dates_from_diary.py
archive/: recommend.py
data/: extras.json  history.json  history_backup.json  ingredients.csv  ingredients.json  meal_diary.json  meal_history.json  meals.json
helpers/: print_ingredients.py  print_meals.py
lists/: Shopping List 20201203 - 20201209.txt
mealprep/: basic_iterator.py  config.py  config.yaml  constants.py  ingredient.py  loc.py  meal.py  meal_collection.py  meal_diary.py  meal_selector.py  rule.py  shopping_list.py  utils.py  write_meals.py
meals/: beef_and_ale_stew.recipe  recipe_parser.py  test_file.py
notes/: TODO.md  notes.md  roadmap.md
routines/: add_meal_to_diary.py  make_shopping_list.py  print_meals.py  recommend_meals.py  remove_dates_from_diary.py
scrap/: required_ingredients.py
src/: basic_iterator.py  check_data_files.py  config.py  constants.py  exceptions.py  ingredient.py  ingredient_quantity.py  loc.py  main.py  meal.py  meal_selector.py  recipe.py  rule.py  (+10 more)
(+117 files in other folders)
