[tool.poetry]
name = "mealprep"
version = "1.1.0"
description = ""
authors = ["Conor McIndoe <conormcindoe1@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
userinputgetter = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[tool.poetry.group.ci.dependencies]
black = "^24.4.0"
isort = "^5.13.2"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
